# squilla_router_standalone

./: .gitattributes  .gitignore  README.md  __main__.py  catalog.py  compaction_state.py  config.py  pricing.py  proxy.py  pyproject.toml
.github/workflows/: ci.yml
engine/: __init__.py  pipeline.py
engine/routing/: __init__.py  policy.py
engine/steps/: __init__.py
squilla_router/: v4_phase3.py
src/squilla_router_standalone/: __init__.py  api.py  compaction.py  decision_record.py  history.py  prompt_cache.py  proxy.py  router_control.py  router_runtime_diagnostics.py  router_tiers.py  tool_result_projection.py
src/squilla_router_standalone/engine/routing/: calibration.py  heuristic.py  policy_data.py
src/squilla_router_standalone/engine/steps/: squilla_router.py
src/squilla_router_standalone/squilla_router/: __init__.py  controller.py
tests/: test_router.py
