[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "squilla-router-standalone"
version = "0.1.0"
description = "Standalone extraction of OpenSquilla's model routing engine (classifier + 8-gate policy)."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "OpenSquilla" }]
dependencies = [
    "httpx>=0.27",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "tomli-w>=0.9",       # TOML writing (tomllib stdlib handles reading)
    "questionary>=2.0",
]

[project.optional-dependencies]
ml = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "onnxruntime>=1.17",
    "lightgbm>=4.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
squilla-router-proxy = "squilla_router_standalone.proxy:main"

[tool.hatch.build.targets.wheel]
packages = ["squilla_router_standalone"]

[tool.hatch.build.targets.wheel.force-include]
"squilla_router_standalone/models/v4.2_phase3_inference" = "squilla_router_standalone/models/v4.2_phase3_inference"

# Bundle assets are data, not Python source — exclude .bin/.pkl/.joblib/.onnx from lint/type checks
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
